--- a/static/css/trips.css
+++ b/static/css/trips.css
@@ -119,6 +119,9 @@
 
 #create-trip-form textarea,
 #trip-form textarea {
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
   min-height: 100px;
   resize: vertical;
 }
